@@ -3,35 +3,20 @@ package no.nav.sbl.dialogarena.soknadinnsending.business.service.soknadservice;
 import io.micrometer.core.instrument.MeterRegistry;
 import io.micrometer.core.instrument.Tag;
 import no.nav.sbl.dialogarena.sendsoknad.domain.kravdialoginformasjon.KravdialogInformasjonHolder;
-import no.nav.sbl.dialogarena.soknadinnsending.business.db.soknad.SoknadRepository;
-import org.slf4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Map;
-
-import static org.slf4j.LoggerFactory.getLogger;
+import java.util.Collections;
 
 @Service
 public class SoknadMetricsService {
 
-    private static final Logger logger = getLogger(SoknadMetricsService.class);
-
-    private static final long RAPPORTERINGS_RATE = 15 * 60 * 1000; // hvert kvarter
-
     private final MeterRegistry meterRegistry;
 
-    private final SoknadRepository lokalDb;
-
-
     @Autowired
-    public SoknadMetricsService(MeterRegistry meterRegistry, @Qualifier("soknadInnsendingRepository") SoknadRepository lokalDb) {
+    public SoknadMetricsService(MeterRegistry meterRegistry) {
 		super();
 		this.meterRegistry = meterRegistry;
-		this.lokalDb = lokalDb;
 	}
 
 	public void startetSoknad(String skjemanummer, boolean erEttersending) {
@@ -48,24 +33,11 @@ public class SoknadMetricsService {
 
     private void rapporterSoknad(String name, String skjemanummer, boolean erEttersending) {
         String soknadstype = getSoknadstype(skjemanummer, erEttersending);
-        meterRegistry.counter(name, List.of(Tag.of("soknadstype", soknadstype))).increment();
+        meterRegistry.counter(name, Collections.singletonList(Tag.of("soknadstype", soknadstype))).increment();
     }
 
     private String getSoknadstype(String skjemanummer, boolean erEttersending) {
         String type = KravdialogInformasjonHolder.hentKonfigurasjon(skjemanummer).getSoknadTypePrefix();
         return (erEttersending ? "ettersending." : "") + type;
-    }
-
-    @Scheduled(fixedRate = RAPPORTERINGS_RATE)
-    public void rapporterSoknadDatabaseStatus() {
-        logger.debug("Henter databasestatus for å rapportere metrics");
-        Map<String, Integer> statuser = lokalDb.hentDatabaseStatus();
-
-        for (Map.Entry<String, Integer> entry : statuser.entrySet()) {
-            logger.debug("Databasestatus for {} er {}", entry.getKey(), entry.getValue());
-        //    Event event = metricsEventFactory.createEvent("status.database." + entry.getKey());
-        //    event.addFieldToReport("antall", entry.getValue());
-        //    event.report();
-        }
     }
 }
